--- a/limits-service.yml
+++ b/limits-service.yml
@@ -1,3 +1,10 @@
+spring:
+  application:
+    name: spring-cloud-config-server
+    
+server:
+  port: '8888'
+
 limits-service:
   minimum: '3'
   maximum: '996'
