--- a/limits-service.yml
+++ b/limits-service.yml
@@ -1,23 +1,23 @@
-server:
-  port: 8080
+# server:
+#   port: 8080
   
-spring:
-  cloud:
-    consul:
-      discovery:
-        instanceId: ServiceA
-        health-check-interval: 5s
-      config:
-        management: 
-          enabled: true
-    stream:
-      bindings:
-        output:
-          binder: kafka
-          destination: cloudEX
-management:
-  security: 
-    enabled: false
+# spring:
+#   cloud:
+#     consul:
+#       discovery:
+#         instanceId: ServiceA
+#         health-check-interval: 5s
+#       config:
+#         management: 
+#           enabled: true
+#     stream:
+#       bindings:
+#         output:
+#           binder: kafka
+#           destination: cloudEX
+# management:
+#   security: 
+#     enabled: false
     
 limits-service:
   minimum: '3'
