--- a/currency-exchange.yml
+++ b/currency-exchange.yml
@@ -4,8 +4,20 @@ spring:
 server:
   port: '8000'
   
-  eureka:
+eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka000
+      defaultZone: http://localhost:8761/eureka
 
+spring:
+  sleuth:
+    sampler:
+      probability: '1.0'
+      
+      resilience4j:
+  retry:
+    instances:
+      sample-api:
+        waitDuration: 3s
+        enableExponentialBackoff: 'true'
+        maxAttempts: '5'
